--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,10 +41,10 @@
     <!-- ! -->
     <!--basic page needs-->
     <meta name="author" content="Desaign Studio" />
-    <meta name="description" content="... by Desaign Studio" />
-    <meta name="keywords" content="..., Desaign, Studio, Digital, Creative, Agency" />
+    <meta name="description" content="Burger Bar by Desaign Studio" />
+    <meta name="keywords" content="Burger Bar, Desaign, Studio, Digital, Creative, Agency" />
 
-    <title>... | Desaign Studio</title>
+    <title>Burger Bar | Desaign Studio</title>
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no" />
@@ -54,13 +54,13 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="application-name" content="... by Desaign Studio" />
+    <meta name="application-name" content="Burger Bar by Desaign Studio" />
     <link rel="icon" sizes="192x192" href="https://desaign.app/clients/cli/images/1x/favicon.ico" />
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="... by Desaign Studio" />
+    <meta name="apple-mobile-web-app-title" content="Burger Bar by Desaign Studio" />
     <link rel="apple-touch-icon" href="https://desaign.app/clients/cli/images/1x/black.png" />
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -76,7 +76,7 @@
     <!-- <meta name="robots" content="noindex, nofollow" /> -->
 
     <!-- Normalize CSS -->
-    <!-- <link rel="stylesheet" href="https://desaign.app/clients/cli/css/normalize.css" /> -->
+    <link rel="stylesheet" href="https://desaign.app/clients/cli/css/normalize.css" />
 
     <!-- JQuery -->
     <script src="https://desaign.app/clients/cli/js/jquery.js" type="text/javascript"></script>
@@ -86,12 +86,12 @@
     <script src="https://desaign.app/clients/cli/js/bootstrap.js" type="text/javascript"></script>
 
     <!-- Developer CSS -->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
   </head>
 
   <body>
     <!-- Main Container -->
-    <div class="mainContainer">{{{body}}}</div>
+    <div class="mainContainer mb-5">{{{body}}}</div>
 
     <!-- Footer -->
     <nav class="navbar fixed-bottom navbar-expand-sm navbar-dark bg-dark mt-5 ps-3">
@@ -99,7 +99,7 @@
     </nav>
 
     <!-- Developer JavaScripts -->
-    <script src="https://desaign.app/clients/cli/javascript/desaign-loader/desaign-loader.js"></script>
-    <script src="" type="text/javascript"></script>
+    {{!-- <script src="https://desaign.app/clients/cli/javascript/desaign-loader/desaign-loader.js"></script> --}}
+    <script src="/assets/js/cats.js" type="text/javascript"></script>
   </body>
 </html>
