image location updated

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
   <div class="row">
     {{!-- section 1 --}}
     <div class="col-md-4 p-2">
-      <img src="./burger.svg" alt="Burger">
+      <img src="/assets/burger.svg" alt="Burger" />
     </div>
     {{!-- section 2 --}}
     <div class="col-md-4 p-2">
