burger layouts changed

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -23,24 +23,30 @@
         <div>
           <h3>Burgers</h3>
           <hr />
-          <button type="button" value="11" class="btn btn-outline-secondary btn-block btn-sm mb-2">The Classic</button>
-          <button type="button" value="12" class="btn btn-outline-secondary btn-block btn-sm mb-2">Prime Time
-            Superime</button>
-          <button type="button" value="13" class="btn btn-outline-secondary btn-block btn-sm mb-2">Thunder
-            Cloud</button>
-          <button type="button" value="14" class="btn btn-outline-secondary btn-block btn-sm mb-2">Impossible</button>
+          <input type="radio" class="btn-check" name="burgers" id="dark-11-outlined" autocomplete="off" value="11">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-11-outlined">The Classic</label>
+          <input type="radio" class="btn-check" name="burgers" id="dark-12-outlined" autocomplete="off" value="12">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-12-outlined">Prime Time Suprime</label>
+          <input type="radio" class="btn-check" name="burgers" id="dark-13-outlined" autocomplete="off" value="13">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-13-outlined">Thunder Cloud</label>
+          <input type="radio" class="btn-check" name="burgers" id="dark-14-outlined" autocomplete="off" value="14">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-14-outlined">Impossible</label>
           <br /><br />
           <h3>Sides</h3>
           <hr />
-          <button type="button" value="21" class="btn btn-outline-secondary btn-block btn-sm mb-2">Sweet Potato
-            Fries</button>
-          <button type="button" value="22" class="btn btn-outline-secondary btn-block btn-sm mb-2">Green Salads</button>
+          <input type="radio" class="btn-check" name="sides" id="dark-21-outlined" autocomplete="off" value="21">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-21-outlined">Sweet Potato</label>
+          <input type="radio" class="btn-check" name="sides" id="dark-22-outlined" autocomplete="off" value="22">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-22-outlined">Green Salad</label>
           <br /><br />
           <h3>Drinks</h3>
           <hr />
-          <button type="button" value="31" class="btn btn-outline-secondary btn-block btn-sm mb-2">Coke</button>
-          <button type="button" value="32" class="btn btn-outline-secondary btn-block btn-sm mb-2">Diet Coke</button>
-          <button type="button" value="33" class="btn btn-outline-secondary btn-block btn-sm mb-2">Iced Tea</button>
+          <input type="radio" class="btn-check" name="drinks" id="dark-31-outlined" autocomplete="off" value="31">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-31-outlined">Coke</label>
+          <input type="radio" class="btn-check" name="drinks" id="dark-32-outlined" autocomplete="off" value="32">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-32-outlined">Diet Coke</label>
+          <input type="radio" class="btn-check" name="drinks" id="dark-33-outlined" autocomplete="off" value="33">
+          <label class="btn btn-outline-dark btn-sm mb-2" for="dark-33-outlined">Iced Tea</label>
           <br />
           <br />
           <h3>How would you like?</h3>
