manifest and readme updated

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,7 +50,7 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <!-- Web Application Manifest -->
-    <link rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="/assets/manifest.json" />
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes" />
@@ -71,7 +71,7 @@
     <meta name="theme-color" content="#003355" />
 
     <!-- Humans Text -->
-    <link type="text/plain" rel="author" href="./humans.txt" />
+    <link type="text/plain" rel="author" href="/assets/humans.txt" />
     <!-- Robots -->
     <!-- <meta name="robots" content="noindex, nofollow" /> -->
 
